--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Chicle&display=swap" rel="stylesheet">
-<title>Spiritual Gifts Survey — Glossy Light (Clean, Dev Icon)</title>
+<title>Spiritual Gifts Survey 🍊</title>
 <style>
   :root{
     --bg:#eef3fb;
