--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Chicle&display=swap" rel="stylesheet">
 <title>Spiritual Gifts Survey 🍊</title>
+<!-- Social / Open Graph -->
+<meta property="og:title" content="Spiritual Gifts Survey">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://godlyfruits.com">
+<meta property="og:image" content="https://res.cloudinary.com/dxj2ezqej/image/upload/v1757007843/ChatGPT_Image_hpehcn.png">
 <style>
   :root{
     --bg:#eef3fb;
